fix: another attempt to fix the gap between plugin icons

--- a/.config/gtk-3.0/gtk.css
+++ b/.config/gtk-3.0/gtk.css
@@ -12,15 +12,15 @@
 }
 
 #xfce4-notification-plugin image {
-  margin-right: -2px;
-  margin-left: -4px
+  margin-right: -6px;
+  margin-left: -6px
 }
 
 #pulseaudio-button {
-  margin-left: 8px
+  margin-left: 6px;
 }
 
 #pulseaudio-button image {
-  margin-right: -2px;
-  margin-left: -4px
+  margin-right: -6px;
+  margin-left: -6px
 }
